--- a/src/index.html
+++ b/src/index.html
@@ -136,42 +136,56 @@
       </div>
     </div>
   </div>
-
-
       <!-- PC -->
       <div class="header__pc-nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
-            <a href="#campaign" class="pc-nav__main">Campaign</a>
-            <a href="#campaign" class="pc-nav__sub">キャンペーン</a>
+            <a href="#campaign">
+              <p class="pc-nav__main">Campaign</p>
+              <p class="pc-nav__sub">キャンペーン</p>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign" class="pc-nav__main">About&nbsp;us</a>
-            <a href="#campaign" class="pc-nav__sub">私たちについて</a>
+            <a href="#about">
+              <p class="pc-nav__main">About&nbsp;us</p>
+              <p class="pc-nav__sub">私たちについて</p>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign" class="pc-nav__main">Information</a>
-            <a href="#campaign" class="pc-nav__sub">ダイビング情報</a>
+            <a href="#information">
+              <p class="pc-nav__main">Information</p>
+              <p class="pc-nav__sub">ダイビング情報</p>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign" class="pc-nav__main">Blog</a>
-            <a href="#campaign" class="pc-nav__sub">ブログ</a>
+            <a href="#blog">
+              <p class="pc-nav__main">Blog</p>
+              <p class="pc-nav__sub">ブログ</p>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign" class="pc-nav__main">Voice</a>
-            <a href="#campaign" class="pc-nav__sub">お客様の声</a>
+            <a href="#voice">
+              <p class="pc-nav__main">Voice</p>
+              <p class="pc-nav__sub">お客様の声</p>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign" class="pc-nav__main">Price</a>
-            <a href="#campaign" class="pc-nav__sub">料金一覧</a>
+            <a href="#price">
+              <p class="pc-nav__main">Price</p>
+              <p class="pc-nav__sub">料金一覧</p>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign" class="pc-nav__main">FAQ</a>
-            <a href="#campaign" class="pc-nav__sub">よくある質問</a>
+            <a href="#faq">
+              <p class="pc-nav__main">FAQ</p>
+              <p class="pc-nav__sub">よくある質問</p>
+            </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#campaign" class="pc-nav__main">Contact</a>
-            <a href="#campaign" class="pc-nav__sub">お問合せ</a>
+            <a href="#contact">
+              <p class="pc-nav__main">Contact</p>
+              <p class="pc-nav__sub">お問合せ</p>
+            </a>
           </li>
         </ul>
       </div>
@@ -220,12 +234,11 @@
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
           <div class="campaign__content title-content">
-            <h2 class="campaign__title title"><span>C</span>ampaign</h2>
-            <p class="campaign__sub-title sub-title">キャンペーン</p>
+            <p class="campaign__title title"><span>C</span>ampaign</p>
+            <h2 class="campaign__sub-title sub-title">キャンペーン</h2>
           </div>
         </div>
         <div class="campaign__swiper-wrap campaign-swiper js-campaign-swiper swiper">
-          <!-- <div class="campaign__swiper js-campaign-swiper swiper"> -->
             <ul class="campaign__swiper-wrapper swiper-wrapper">
               <li class="campaign__card swiper-slide">
                 <a href="#">
@@ -388,7 +401,6 @@
                 </a>
               </li>
             </ul>
-          <!-- </div> -->
         </div>
         <a href="#" class="campaign__button button">
           <div class="button__wrap">
@@ -403,26 +415,25 @@
     <section id="about-us" class="about-us">
       <div class="about-us__inner inner">
         <div class="about-us__content title-content">
-          <h2 class="about-us__title title"><span>A</span>bout&nbsp;us</h2>
-          <p class="about-us__sub-title sub-title">私たちについて</p>
+          <p class="about-us__title title"><span>A</span>bout&nbsp;us</p>
+          <h2 class="about-us__sub-title sub-title">私たちについて</h2>
         </div>
-        <div class="about-us__content">
+        <div class="about-us__contents">
           <div class="about-us__img-wrap">
             <div class="about-us__img-left">
               <picture>
-                <source media="(max-width: 768px)" srcset="./assets/images/common/Aboutas-1.jpg">
-                <img src="./assets/images/common/Aboutas-1-sp.jpg" alt="屋根の上のシーサー">
+                <source media="(max-width: 768px)" srcset="./assets/images/common/Aboutas-1-sp.jpg">
+                <img src="./assets/images/common/Aboutas-1.jpg" alt="屋根の上のシーサー">
               </picture>
             </div>
             <div class="about-us__img-right">
               <picture>
-                <source media="(max-width: 768px)" srcset="./assets/images/common/Aboutas-2.jpg">
-                <img src="./assets/images/common/Aboutas-2-sp.jpg" alt="海の中で２匹の魚が泳いでいる様子">
+                <source media="(max-width: 768px)" srcset="./assets/images/common/Aboutas-2-sp.jpg">
+                <img src="./assets/images/common/Aboutas-2.jpg" alt="海の中で２匹の魚が泳いでいる様子">
               </picture>
             </div>
           </div>
           <div class="about-us__text-body">
-              <div class="about-us__block">
                 <h2 class="about-us__sub-titles">Dive&nbsp;into<br>the&nbsp;Ocean</h2>
               <div class="about-us__button-content">
                 <p class="about-us__sub-texts">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
@@ -434,7 +445,6 @@
                 </div>
               </a>
               </div>
-            </div>
           </div>
         </div>
       </div>
@@ -444,8 +454,8 @@
     <section id="information" class="information">
       <div class="information__inner inner">
           <div class="information__content title-content">
-            <h2 class="information__title title"><span>I</span>nformation</h2>
-            <p class="information__sub-title sub-title">ダイビング情報</p>
+            <p class="information__title title"><span>I</span>nformation</p>
+            <h2 class="information__sub-title sub-title">ダイビング情報</h2>
           </div>
         <div class="information__body">
           <div class="information__img colorbox js-colorbox">
@@ -469,39 +479,39 @@
     <!-- Blog -->
     <section id="blog" class="blog">
       <div class="blog__inner inner">
-        <div class="blog__content title-content">
-          <h2 class="blog__title"><span>B</span>log</h2>
-          <p class="blog__sub-title">ブログ</p>
+        <div class="blog__content">
+          <p class="blog__title"><span>B</span>log</p>
+          <h2 class="blog__sub-title">ブログ</h2>
         </div>
         <ul class="blog__card">
-          <li class="blog-card__item">
-            <a href="#">
-              <div class="blog-card__item-img">
-                <img src="./assets/images/common/Blog-1.jpg" alt="イソギンチャク">
-              </div>
-              <div class="blog-card__item-content">
-                <p class="blog-card__item-category">2023.11/17</p>
-                <p class="blog-card__item-title">ライセンス取得</p>
-                <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
-              </div>
-            </a>
-          </li>
-          <li class="blog-card__item">
-            <a href="#">
-              <div class="blog-card__item-img">
-                <img src="./assets/images/common/Blog-2.jpg" alt="ウミガメ">
-              </div>
-              <div class="blog-card__item-content">
-                <p class="blog-card__item-category">2023.11/17</p>
-                <p class="blog-card__item-title">ウミガメと泳ぐ</p>
-                <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
-              </div>
-            </a>
-          </li>
-          <li class="blog-card__item">
-            <a href="#">
+          <a href="#">
+            <li class="blog-card__item">
+                <div class="blog-card__item-img">
+                  <img src="./assets/images/common/Blog-1.jpg" alt="イソギンチャク">
+                </div>
+                <div class="blog-card__item-content">
+                  <p class="blog-card__item-category">2023.11/17</p>
+                  <p class="blog-card__item-title">ライセンス取得</p>
+                  <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
+                </div>
+            </li>
+          </a>
+          <a href="#">
+            <li class="blog-card__item">
+                <div class="blog-card__item-img">
+                  <img src="./assets/images/common/Blog-2.jpg" alt="ウミガメ">
+                </div>
+                <div class="blog-card__item-content">
+                  <p class="blog-card__item-category">2023.11/17</p>
+                  <p class="blog-card__item-title">ウミガメと泳ぐ</p>
+                  <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
+                </div>
+            </li>
+          </a>
+          <a href="#">
+            <li class="blog-card__item">
               <div class="blog-card__item-img">
                 <img src="./assets/images/common/blog-3.jpg" alt="カクレクマノミ">
               </div>
@@ -511,15 +521,15 @@
                 <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
               </div>
-            </a>
-          </li>
+            </li>
+          </a>
         </ul>
-        <div class="blog__button button">
+        <a class="blog__button button">
           <div class="button__wrap">
             <div class="button__active">View&nbsp;more</div>
             <div class="button__stickarrow"></div>
           </div>
-        </div>
+        </a>
       </div>
     </section>
 
@@ -527,13 +537,13 @@
     <section id="voice" class="voice">
       <div class="voice__inner inner">
           <div class="voice__content title-content">
-            <h2 class="voice__title title"><span>V</span>oice</h2>
-            <p class="voice__sub-title sub-title">お客様の声</p>
+            <p class="voice__title title"><span>V</span>oice</p>
+            <h2 class="voice__sub-title sub-title">お客様の声</h2>
           </div>
         <div class="voice__body">
           <ul class="voice__card">
-            <li class="voice-card__item">
-              <a href="#">
+            <a href="#">
+              <li class="voice-card__item">
                 <div class="voice-card__item-content">
                   <div class="voice-card__box">
                     <div class="voice-card__items">
@@ -555,10 +565,10 @@
                     ここにテキストが入ります。ここにテキストが入ります。
                   </p>
                 </div>
-              </a>
-            </li>
-            <li class="voice-card__item">
-              <a href="#">
+              </li>
+            </a>
+            <a href="#">
+              <li class="voice-card__item">
                 <div class="voice-card__item-content">
                   <div class="voice-card__box">
                     <div class="voice-card__items">
@@ -580,15 +590,15 @@
                     ここにテキストが入ります。ここにテキストが入ります。
                   </p>
                 </div>
-              </a>
-            </li>
+              </li>
+            </a>
           </ul>
-          <div class="voice__button button">
+          <a class="voice__button button">
             <div class="button__wrap">
               <div class="button__active">View&nbsp;more</div>
               <div class="button__stickarrow"></div>
             </div>
-          </div>
+          </a>
         </div>
         </div>
     </section>
@@ -597,8 +607,8 @@
     <section id="price" class="price">
       <div class="price__inner inner title-content">
           <div class="price__content">
-            <h2 class="price__title title"><span>P</span>rice</h2>
-            <p class="price__sub-title sub-title">料金一覧</p>
+            <p class="price__title title"><span>P</span>rice</p>
+            <h2 class="price__sub-title sub-title">料金一覧</h2>
           </div>
         <div class="price__body">
           <div class="price__box">
@@ -681,57 +691,57 @@
               </tr>
             </table>
           </div>
-          <div class="voice__button button">
+          <a class="voice__button button">
             <div class="button__wrap">
               <div class="button__active">View&nbsp;more</div>
               <div class="button__stickarrow"></div>
             </div>
-          </div>
+          </a>
         </div>
         </div>
     </section>
 
 <!-- Contact-top -->
-<section id="contact-top" class="contact-top">
-  <div class="contact-top__inner inner">
-    <div class="contact-top__frame">
-      <div class="contact-top__text-content">
-        <div class="contact-top__logo">
-          <a href="#" class="contact-top__logo-link">
-            <img src="./assets/images/common/icon-revers.svg" alt="コンタクトヘッダーロゴ">
-          </a>
-        </div>
-        <div class="contact-top__address">
-          <p class="contact-top__text">沖縄県那覇市1-1<br>TEL:0120-000-0000<br>営業時間:8:30-19:00<br>定休日:毎週火曜日</p>
-          <div class="contact-top__iframe-wrap">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d14318.404015985121!2d127.67581645836415!3d26.20965463475817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z5rKW57iE55yM6YKj6KaH5biCMS0x!5e0!3m2!1sja!2sjp!4v1714905303472!5m2!1sja!2sjp" width="295" height="160" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <section class="contact-top" id="contact-top">
+      <div class="contact-top__inner inner">
+        <div class="contact-top__contents">
+          <div class="contact-top__map">
+            <h3 class="contact-top__logo-wrap"><img src="./assets/images/common/icon-revers.svg" class="contact-top__logo" alt="ロゴ"></h3>
+            <div class="contact-top__text-wrap">
+              <div class="contact-top__text">
+                <p>沖縄県那覇市1-1</p>
+                <p>TEL:0120-000-0000</p>
+                <p>営業時間:8:30-19:00</p>
+                <p>定休日:毎週火曜日</p>
+              </div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57272.98530030893!2d127.64350223082273!3d26.21093643736236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e5697141a6b58b%3A0x2cd8aff616585e98!2z5rKW57iE55yM6YKj6KaH5biC!5e0!3m2!1sja!2sjp!4v1714199998793!5m2!1sja!2sjp" width="295" height="160" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
+          <div class="contact-top__title-wrap">
+            <div class="contact-top__title">
+              <p class="contact-top__title title"><span>C</span>ontact</p>
+              <h2 class="contact-top__sub-title sub-title">お問い合わせ</h2>
+              <p class="contact-top__sub-text">ご予約・お問合せはコチラ</p>
+              <a class="contact-top__button button">
+                <div class="button__wrap">
+                  <div class="button__active">Contact&nbsp;us</div>
+                  <div class="button__stickarrow"></div>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="contact-top__body">
-        <div class="contact-top__content title-content">
-          <h2 class="contact-top__title title"><span>C</span>ontact</h2>
-          <p class="contact-top__sub-title sub-title">お問い合わせ</p>
-          <p class="contact-top__sub-text">ご予約・お問い合わせはコチラ</p>
-        </div>
-        <div class="contact-top__button button">
-          <div class="button__wrap">
-            <div class="button__active">Contact&nbsp;us</div>
-            <div class="button__stickarrow"></div>
-          </div>
-        </div>
-      </div>
-        <a href="#top" class="contact-top__page-top"></a>
-    </div>
-  </div>
-</section>
+    </section>
 
   </main>
-
+    <a href="#" class="back-to-top js-back-to-top">
+      <img src="./assets/images/common/back-to-top.svg" alt="トップへ戻るボタン"/>
+    </a>
     <footer class="footer">
       <div class="footer__wrap">
         <div class="footer__icon-wrap">
-          <a href="#" class="footer__logo"><img src="./assets/images/common/icon.svg" alt="CodeUps"></a>
+          <a href="#" class="footer__logo"><img src="./assets/images/common/icon.svg" alt="ロゴ"></a>
           <div class="footer__sns-wrap">
             <a href="https://www.facebook.com/" target="_blank" class="footer__sns"><img src="./assets/images/common/FacebookLogo.svg" alt="facebookのロゴ"></a>
             <a href="https://www.instagram.com/" target="_blank" class="footer__sns"><img src="./assets/images/common/InstagramLogo.svg" alt="instagramのロゴ"></a>
