0603　動画FB修正済み

--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#contact">
+            <a href="#contact-top">
               <p class="pc-nav__main">Contact</p>
               <p class="pc-nav__sub">お問合せ</p>
             </a>
@@ -234,7 +234,7 @@
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
           <div class="campaign__content title-content">
-            <p class="campaign__title title"><span>C</span>ampaign</p>
+            <p class="campaign__title title">Campaign</p>
             <h2 class="campaign__sub-title sub-title">キャンペーン</h2>
           </div>
         </div>
@@ -402,12 +402,9 @@
               </li>
             </ul>
         </div>
-        <a href="#" class="campaign__button button">
-          <div class="button__wrap">
-            <div class="button__active">View&nbsp;more</div>
-            <div class="button__stickarrow"></div>
-          </div>
-        </a>
+        <div class="campaign__button">
+          <a href="#" class="button">View more<span></span></a>
+        </div>
       </div>
     </section>
 
@@ -415,7 +412,7 @@
     <section id="about-us" class="about-us">
       <div class="about-us__inner inner">
         <div class="about-us__content title-content">
-          <p class="about-us__title title"><span>A</span>bout&nbsp;us</p>
+          <p class="about-us__title title">About&nbsp;us</p>
           <h2 class="about-us__sub-title sub-title">私たちについて</h2>
         </div>
         <div class="about-us__contents">
@@ -438,12 +435,9 @@
               <div class="about-us__button-content">
                 <p class="about-us__sub-texts">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
-              <a href="#" class="about-us__button button">
-                <div class="button__wrap">
-                  <div class="button__active">View&nbsp;more</div>
-                  <div class="button__stickarrow"></div>
-                </div>
-              </a>
+                  <div class="about-us__button">
+                    <a href="#" class="button">View more<span></span></a>
+                  </div>
               </div>
           </div>
         </div>
@@ -454,7 +448,7 @@
     <section id="information" class="information">
       <div class="information__inner inner">
           <div class="information__content title-content">
-            <p class="information__title title"><span>I</span>nformation</p>
+            <p class="information__title title">Information</p>
             <h2 class="information__sub-title sub-title">ダイビング情報</h2>
           </div>
         <div class="information__body">
@@ -465,12 +459,9 @@
           <p class="information__titles">ライセンス講習</p>
           <p class="information__text">当店はダイビングライセンス（Cカード）世界最大の教育機関PADI<br class="sp-none">の「正規店」として店舗登録されています。<br>
             正規登録店として、安心安全に初めての方でも安心安全にライセン<br class="sp-none">ス取得をサポート致します。</p>
-          <a href="#" class="information__button button">
-            <div class="button__wrap">
-              <div class="button__active">View&nbsp;more</div>
-              <div class="button__stickarrow"></div>
+            <div class="information__button">
+              <a href="#" class="button">View more<span></span></a>
             </div>
-          </a>
         </div>
         </div>
       </div>
@@ -480,38 +471,38 @@
     <section id="blog" class="blog">
       <div class="blog__inner inner">
         <div class="blog__content">
-          <p class="blog__title"><span>B</span>log</p>
+          <p class="blog__title">Blog</p>
           <h2 class="blog__sub-title">ブログ</h2>
         </div>
         <ul class="blog__card">
-          <a href="#">
-            <li class="blog-card__item">
-                <div class="blog-card__item-img">
-                  <img src="./assets/images/common/Blog-1.jpg" alt="イソギンチャク">
-                </div>
-                <div class="blog-card__item-content">
-                  <p class="blog-card__item-category">2023.11/17</p>
-                  <p class="blog-card__item-title">ライセンス取得</p>
-                  <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+          <li class="blog-card__item">
+            <a href="">
+              <div class="blog-card__item-img">
+                <img src="./assets/images/common/Blog-1.jpg" alt="イソギンチャク">
+              </div>
+              <div class="blog-card__item-content">
+                <p class="blog-card__item-category">2023.11/17</p>
+                <p class="blog-card__item-title">ライセンス取得</p>
+                <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
-                </div>
-            </li>
-          </a>
-          <a href="#">
-            <li class="blog-card__item">
-                <div class="blog-card__item-img">
-                  <img src="./assets/images/common/Blog-2.jpg" alt="ウミガメ">
-                </div>
-                <div class="blog-card__item-content">
-                  <p class="blog-card__item-category">2023.11/17</p>
-                  <p class="blog-card__item-title">ウミガメと泳ぐ</p>
-                  <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+              </div>
+            </a>
+          </li>
+          <li class="blog-card__item">
+            <a href="">
+              <div class="blog-card__item-img">
+                <img src="./assets/images/common/Blog-2.jpg" alt="ウミガメ">
+              </div>
+              <div class="blog-card__item-content">
+                <p class="blog-card__item-category">2023.11/17</p>
+                <p class="blog-card__item-title">ウミガメと泳ぐ</p>
+                <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
-                </div>
-            </li>
-          </a>
-          <a href="#">
-            <li class="blog-card__item">
+              </div>
+            </a>
+          </li>
+          <li class="blog-card__item">
+            <a href="">
               <div class="blog-card__item-img">
                 <img src="./assets/images/common/blog-3.jpg" alt="カクレクマノミ">
               </div>
@@ -519,17 +510,14 @@
                 <p class="blog-card__item-category">2023.11/17</p>
                 <p class="blog-card__item-title">カクレクマノミ</p>
                 <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
+                    ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
               </div>
-            </li>
-          </a>
+            </a>
+          </li>
         </ul>
-        <a class="blog__button button">
-          <div class="button__wrap">
-            <div class="button__active">View&nbsp;more</div>
-            <div class="button__stickarrow"></div>
-          </div>
-        </a>
+        <div class="blog__button">
+          <a href="#" class="button">View more<span></span></a>
+        </div>
       </div>
     </section>
 
@@ -537,69 +525,65 @@
     <section id="voice" class="voice">
       <div class="voice__inner inner">
           <div class="voice__content title-content">
-            <p class="voice__title title"><span>V</span>oice</p>
+            <p class="voice__title title">Voice</p>
             <h2 class="voice__sub-title sub-title">お客様の声</h2>
           </div>
         <div class="voice__body">
           <ul class="voice__card">
-            <a href="#">
-              <li class="voice-card__item">
+            <li class="voice-card__item">
+              <a href="">
                 <div class="voice-card__item-content">
                   <div class="voice-card__box">
                     <div class="voice-card__items">
-                      <div class="voice-card__wrap">
-                        <p class="voice-card__item-information">20代(女性)</p>
-                        <p class="voice-card__item-tag">ライセンス講習</p>
-                      </div>
+                    <div class="voice-card__wrap">
+                      <p class="voice-card__item-information">20代(女性)</p>
+                      <p class="voice-card__item-tag">ライセンス講習</p>
+                    </div>
                       <p class="voice-card__item-title">
-                        ここにタイトルが入ります。ここにタイトル
+                          ここにタイトルが入ります。ここにタイトル
                       </p>
-                    </div>
-                    <div class="voice-card__item-img colorbox js-colorbox">
-                        <img src="./assets/images/common/Voice-1.jpg" alt="帽子を被った女性の写真">
-                    </div>
+                      </div>
+                      <div class="voice-card__item-img colorbox js-colorbox">
+                          <img src="./assets/images/common/Voice-1.jpg" alt="帽子を被った女性の写真">
+                      </div>
                   </div>
-                  <p class="voice-card__item-text">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-                    ここにテキストが入ります。ここにテキストが入ります。
-                  </p>
+                    <p class="voice-card__item-text">
+                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                      ここにテキストが入ります。ここにテキストが入ります。
+                    </p>
                 </div>
-              </li>
-            </a>
-            <a href="#">
-              <li class="voice-card__item">
+              </a>
+            </li>
+            <li class="voice-card__item">
+              <a href="">
                 <div class="voice-card__item-content">
                   <div class="voice-card__box">
                     <div class="voice-card__items">
-                      <div class="voice-card__wrap">
-                        <p class="voice-card__item-information">20代(男性)</p>
-                        <p class="voice-card__item-tag">ファンダイビング</p>
-                      </div>
+                    <div class="voice-card__wrap">
+                      <p class="voice-card__item-information">30代(男性)</p>
+                      <p class="voice-card__item-tag">ファンダイビング</p>
+                    </div>
                       <p class="voice-card__item-title">
-                        ここにタイトルが入ります。ここにタイトル
+                          ここにタイトルが入ります。ここにタイトル
                       </p>
-                    </div>
-                    <div class="voice-card__item-img colorbox js-colorbox">
-                        <img src="./assets/images/common/Voice-2.jpg" alt="グットポーズをした男性の写真">
-                    </div>
+                      </div>
+                      <div class="voice-card__item-img colorbox js-colorbox">
+                          <img src="./assets/images/common/Voice-2.jpg" alt="グットポーズをした男性の写真">
+                      </div>
                   </div>
-                  <p class="voice-card__item-text">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-                    ここにテキストが入ります。ここにテキストが入ります。
-                  </p>
+                    <p class="voice-card__item-text">
+                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                      ここにテキストが入ります。ここにテキストが入ります。
+                    </p>
                 </div>
-              </li>
-            </a>
+              </a>
+            </li>
           </ul>
-          <a class="voice__button button">
-            <div class="button__wrap">
-              <div class="button__active">View&nbsp;more</div>
-              <div class="button__stickarrow"></div>
-            </div>
-          </a>
-        </div>
+          <div class="voice__button">
+            <a href="#" class="button">View more<span></span></a>
+          </div>
         </div>
     </section>
 
@@ -607,13 +591,13 @@
     <section id="price" class="price">
       <div class="price__inner inner title-content">
           <div class="price__content">
-            <p class="price__title title"><span>P</span>rice</p>
+            <p class="price__title title">Price</p>
             <h2 class="price__sub-title sub-title">料金一覧</h2>
           </div>
         <div class="price__body">
           <div class="price__box">
             <picture class="price__img colorbox js-colorbox">
-              <source media="(max-width: 768px)" srcset="./assets/images/common/price-1-sp.jpg">
+              <source media="(max-width: 767px)" srcset="./assets/images/common/price-1-sp.jpg">
               <img src="./assets/images/common/price-1.jpg" alt="サンゴの周りで沢山の魚が泳いでいる様子">
             </picture>
             <table class="price__content">
@@ -691,12 +675,9 @@
               </tr>
             </table>
           </div>
-          <a class="voice__button button">
-            <div class="button__wrap">
-              <div class="button__active">View&nbsp;more</div>
-              <div class="button__stickarrow"></div>
-            </div>
-          </a>
+          <div class="price__button">
+            <a href="#" class="button">View more<span></span></a>
+          </div>
         </div>
         </div>
     </section>
@@ -719,15 +700,12 @@
           </div>
           <div class="contact-top__title-wrap">
             <div class="contact-top__title">
-              <p class="contact-top__title title"><span>C</span>ontact</p>
+              <p class="contact-top__title title">Contact</p>
               <h2 class="contact-top__sub-title sub-title">お問い合わせ</h2>
               <p class="contact-top__sub-text">ご予約・お問合せはコチラ</p>
-              <a class="contact-top__button button">
-                <div class="button__wrap">
-                  <div class="button__active">Contact&nbsp;us</div>
-                  <div class="button__stickarrow"></div>
-                </div>
-              </a>
+              <div class="contact-top__button">
+                <a href="#" class="button">Contact us<span></span></a>
+              </div>
             </div>
           </div>
         </div>
