--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,7 @@
                   <div class="campaign__card-body">
                     <div class="campaign__card-meta">
                       <span class="campaign__card-tag">ライセンス講習</span>
-                      <p class="campaign__card-category">ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得ライセンス取得</p>
+                      <p class="campaign__card-category">ライセンス取得</p>
                     </div>
                     <div class="campaign__card-contents">
                       <p class="campaign__card-title">全部コミコミ(お一人様)</p>
