--- a/src/index.html
+++ b/src/index.html
@@ -218,7 +218,7 @@
             </div>
           </div>
           <div class="mv__title-wrap">
-            <h1 class="mv__title">DIVING</h1>
+            <h2 class="mv__title">DIVING</h2>
             <p class="mv__text">into&nbsp;the&nbsp;ocean</p>
           </div>
         </div>
@@ -239,7 +239,7 @@
             </div>
           </div>
           <div class="campaign__swiper-wrap campaign-swiper js-campaign-swiper swiper">
-            <ul class="campaign__cards campaign__swiper-wrapper swiper-wrapper">
+            <ul class="campaign__cards swiper-wrapper">
               <li class="campaign__card swiper-slide">
                 <a href="#">
                   <div class="campaign__card-img">
@@ -379,7 +379,7 @@
             <img src="./assets/images/common/Information.jpg" alt="サンゴの周りで魚が泳いでいる様子">
           </div>
         <div class="information__text-content">
-          <p class="information__titles">ライセンス講習</p>
+          <h3 class="information__titles">ライセンス講習</h3>
           <p class="information__text">当店はダイビングライセンス（Cカード）世界最大の教育機関PADI<br class="sp-none">の「正規店」として店舗登録されています。<br>
             正規登録店として、安心安全に初めての方でも安心安全にライセン<br class="sp-none">ス取得をサポート致します。</p>
             <div class="information__button">
@@ -395,12 +395,12 @@
       <div class="blog__inner inner">
         <div class="blog__title">
           <div class="title">
-            <p class="title__main-blog">Blog</p>
-            <h2 class="title__sub-blog">ブログ</h2>
+            <p class="title__main title__main-blog">Blog</p>
+            <h2 class="title__sub title__sub-blog">ブログ</h2>
           </div>
         </div>
         <ul class="blog__cards blog-cards">
-          <li class="blog__card blog-card">
+          <li class="blog-cards__card blog-card">
             <a href="">
               <div class="blog-card__item-img">
                 <img src="./assets/images/common/Blog-1.jpg" alt="イソギンチャク">
@@ -413,7 +413,7 @@
               </div>
             </a>
           </li>
-          <li class="blog__card blog-card">
+          <li class="blog-cards__card blog-card">
             <a href="">
               <div class="blog-card__item-img">
                 <img src="./assets/images/common/Blog-2.jpg" alt="ウミガメ">
@@ -426,7 +426,7 @@
               </div>
             </a>
           </li>
-          <li class="blog__card blog-card">
+          <li class="blog-cards__card blog-card">
             <a href="">
               <div class="blog-card__item-img">
                 <img src="./assets/images/common/blog-3.jpg" alt="カクレクマノミ">
@@ -456,7 +456,7 @@
           </div>
         </div>
           <ul class="voice__cards voice-cards">
-            <li class="voice__card voice-card">
+            <li class="voice-cards__card voice-card">
               <a href="">
                 <div class="voice-card__item-content">
                   <div class="voice-card__box">
@@ -481,7 +481,7 @@
                 </div>
               </a>
             </li>
-            <li class="voice__card voice-card">
+            <li class="voice-cards__card voice-card">
               <a href="">
                 <div class="voice-card__item-content">
                   <div class="voice-card__box">
@@ -527,80 +527,80 @@
               <source media="(max-width: 767px)" srcset="./assets/images/common/price-1-sp.jpg">
               <img src="./assets/images/common/price-1.jpg" alt="サンゴの周りで沢山の魚が泳いでいる様子">
             </picture>
-            <table class="price__content">
-              <tr class="price__item">
-                <td>
-                  <div class="price__heading">ライセンス講習</div>
+            <div class="price__content">
+              <div class="price__item">
+                <h3 class="price__heading">ライセンス講習</h3>
+                <dl class="price__list">
                   <div class="price__item-container">
-                    <div class="price__text">オープンウォーターダイバーコース</div>
-                    <div class="price__price-menu">¥50,000</div>
+                    <dt class="price__text">オープンウォーターダイバーコース</dt>
+                    <dd class="price__price-menu">¥50,000</dd>
                   </div>
                   <div class="price__item-container">
-                    <div class="price__text">アドバンスドオープンウォーターコース</div>
-                    <div class="price__price-menu">¥60,000</div>
+                    <dt class="price__text">アドバンスドオープンウォーターコース</dt>
+                    <dd class="price__price-menu">¥60,000</dd>
                   </div>
                   <div class="price__item-container">
-                    <div class="price__text">レスキュー＋EFRコース</div>
-                    <div class="price__price-menu">¥70,000</div>
+                    <dt class="price__text">レスキュー＋EFRコース</dt>
+                    <dd class="price__price-menu">¥70,000</dd>
                   </div>
-                </td>
-              </tr>
-              <tr class="price__item">
-                <td>
-                  <div class="price__heading">体験ダイビング</div>
+                </dl>
+              </div>
+              <div class="price__item">
+                <h3 class="price__heading">体験ダイビング</h3>
+                <dl class="price__list">
                   <div class="price__item-container">
-                    <div class="price__text">ビーチ体験ダイビング(半日)</div>
-                    <div class="price__price-menu">¥7,000</div>
-                  </div>
-                  <div class="price__item-container">
-                    <div class="price__text">ビーチ体験ダイビング(1日)</div>
-                    <div class="price__price-menu">¥14,000</div>
+                    <dt class="price__text">ビーチ体験ダイビング(半日)</dt>
+                    <dd class="price__price-menu">¥7,000</dd>
                   </div>
                   <div class="price__item-container">
-                    <div class="price__text">ボート体験ダイビング(半日)</div>
-                    <div class="price__price-menu">¥10,000</div>
+                    <dt class="price__text">ビーチ体験ダイビング(1日)</dt>
+                    <dd class="price__price-menu">¥14,000</dd>
                   </div>
                   <div class="price__item-container">
-                    <div class="price__text">ボート体験ダイビング(1日)</div>
-                    <div class="price__price-menu">¥18,000</div>
-                  </div>
-                </td>
-              </tr>
-              <tr class="price__item">
-                <td>
-                  <div class="price__heading">ファンダイビング</div>
-                  <div class="price__item-container">
-                    <div class="price__text">ビーチダイビング(2ダイブ)</div>
-                    <div class="price__price-menu">¥14,000</div>
+                    <dt class="price__text">ボート体験ダイビング(半日)</dt>
+                    <dd class="price__price-menu">¥10,000</dd>
                   </div>
                   <div class="price__item-container">
-                    <div class="price__text">ボートダイビング(2ダイブ)</div>
-                    <div class="price__price-menu">¥18,000</div>
+                    <dt class="price__text">ボート体験ダイビング(1日)</dt>
+                    <dd class="price__price-menu">¥18,000</dd>
+                  </div>
+                </dl>
+              </div>
+              <div class="price__item">
+                <h3 class="price__heading">ファンダイビング</h3>
+                <dl class="price__list">
+                  <div class="price__item-container">
+                    <dt class="price__text">ビーチダイビング(2ダイブ)</dt>
+                    <dd class="price__price-menu">¥14,000</dd>
                   </div>
                   <div class="price__item-container">
-                    <div class="price__text">スペシャルダイビング(2ダイブ)</div>
-                    <div class="price__price-menu">¥24,000</div>
+                    <dt class="price__text">ボートダイビング(2ダイブ)</dt>
+                    <dd class="price__price-menu">¥18,000</dd>
                   </div>
                   <div class="price__item-container">
-                    <div class="price__text">ナイトダイビング(1ダイブ)</div>
-                    <div class="price__price-menu">¥10,000</div>
-                  </div>
-                </td>
-              </tr>
-              <tr class="price__item">
-                <td>
-                  <div class="price__heading">スペシャルダイビング</div>
-                  <div class="price__item-container">
-                    <div class="price__text">貸切ダイビング(2ダイブ)</div>
-                    <div class="price__price-menu">¥24,000</div>
+                    <dt class="price__text">スペシャルダイビング(2ダイブ)</dt>
+                    <dd class="price__price-menu">¥24,000</dd>
                   </div>
                   <div class="price__item-container">
-                    <div class="price__text">1日ダイビング(3ダイブ)</div>
-                    <div class="price__price-menu">¥32,000</div>
+                    <dt class="price__text">ナイトダイビング(1ダイブ)</dt>
+                    <dd class="price__price-menu">¥10,000</dd>
                   </div>
-                </td>
-              </tr>
-            </table>
+                </dl>
+              </div>
+              <div class="price__item">
+                <h3 class="price__heading">スペシャルダイビング</h3>
+                <dl class="price__list">
+                  <div class="price__item-container">
+                    <dt class="price__text">貸切ダイビング(2ダイブ)</dt>
+                    <dd class="price__price-menu">¥24,000</dd>
+                  </div>
+                  <div class="price__item-container">
+                    <dt class="price__text">1日ダイビング(3ダイブ)</dt>
+                    <dd class="price__price-menu">¥32,000</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
           </div>
           <div class="price__button">
             <a href="#" class="button">View more<span></span></a>
@@ -618,7 +618,9 @@
             <div class="contact-top__text-wrap">
               <div class="contact-top__text">
                 <p>沖縄県那覇市1-1</p>
-                <p>TEL:0120-000-0000</p>
+                <p>
+                  <a href="tel:01200000000">TEL:0120-000-0000</a>
+                </p>
                 <p>営業時間:8:30-19:00</p>
                 <p>定休日:毎週火曜日</p>
               </div>
@@ -628,8 +630,8 @@
           <div class="contact-top__title-wrap">
             <div class="contact-top__title">
               <div class="title">
-                <p class="contact-top__title-main title__main contact-top__title-main">Contact</p>
-                <h2 class="contact-top__title-sub title__sub">お問い合わせ</h2>
+                <p class="title__main title__main--contact-top">Contact</p>
+                <h2 class="title__sub title__sub--contact-top">お問い合わせ</h2>
               </div>
             </div>
               <p class="contact-top__sub-text">ご予約・お問合せはコチラ</p>
