--- a/src/index.html
+++ b/src/index.html
@@ -395,8 +395,8 @@
       <div class="blog__inner inner">
         <div class="blog__title">
           <div class="title">
-            <p class="title__main title__main-blog">Blog</p>
-            <h2 class="title__sub title__sub-blog">ブログ</h2>
+            <p class="title__main title__main--blog">Blog</p>
+            <h2 class="title__sub title__sub--blog">ブログ</h2>
           </div>
         </div>
         <ul class="blog__cards blog-cards">
