--- a/src/page-404.html
+++ b/src/page-404.html
@@ -222,7 +222,7 @@
               <div class="page-404__text">申し訳ありません。<br>お探しのページが見つかりません。</div>
             </div>
             <div class="page-404__button">
-              <a href="#" class="button-white" >Page TOP<span></span></a>
+              <a href="index.html" class="button-white" >Page TOP<span></span></a>
             </div>
           </div>
         </div>
